[java-injection] IDEA-386674 support String.format for injection
GitOrigin-RevId: 7407e80719a5e2ddbe4dae07804da7b789053d5a